# claude-vol-trading

./: .env.example  .gitignore  FRD.md  README.md  pyproject.toml  run.bat
configs/: default.yaml
scripts/: analyze_capital.py  backtest.py  backtest_2y.py  backtest_history_fetch.py  backtest_report.md  backtest_sweep_session.py  dhan_history_probe.py  dhan_master_coverage.py
src/volscalp/: __init__.py  config.py  logging_setup.py  main.py  models.py  process_guard.py
src/volscalp/broker/: __init__.py  dhan_client.py  dhan_ws.py  instruments.py
src/volscalp/dashboard/: __init__.py  app.py  event_bus.py
src/volscalp/dashboard/static/: app.js  index.html  style.css
src/volscalp/market_data/: __init__.py  candles.py  feed.py
src/volscalp/orders/: __init__.py  manager.py  reconciler.py
src/volscalp/storage/: __init__.py  db.py  schema.sql
src/volscalp/strategy/: __init__.py  engine.py  mtm.py
