[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "volscalp"
version = "0.1.0"
description = "High-frequency NIFTY/BANKNIFTY OTM-strangle scalping engine with paper and live (Dhan) modes."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "websockets>=12.0",
  "uvloop>=0.19; sys_platform != 'win32'",
  "orjson>=3.10",
  "structlog>=24.1",
  "aiosqlite>=0.20",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "pyyaml>=6.0",
  "psutil>=5.9",
  "dhanhq>=2.0.2",
  "pyotp>=2.9",
  "rich>=13.7",
  "jinja2>=3.1",
]

[project.scripts]
volscalp = "volscalp.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/volscalp"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N"]
ignore = ["E501"]
